--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             if (lastDigit === 1 && lastTwoDigits !== 11) {
                 alert(number + " рік");
-            } else if ((lastDigit === 2 , lastDigit === 3 , lastDigit === 4) && (lastTwoDigits !== 12 && lastTwoDigits !== 13 && lastTwoDigits !== 14)) {
+            } else if ((lastDigit === 2 || lastDigit === 3 || lastDigit === 4) && (lastTwoDigits !== 12 && lastTwoDigits !== 13 && lastTwoDigits !== 14)) {
                 alert(number + " роки");
             } else {
                 alert(number + " років");
