--- a/index.html
+++ b/index.html
@@ -4,17 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework 5</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <label for="height">Enter height</label>
-    <br>
     <input type="number" id="height">
-    <br>
     <label for="symbol">Enter a symbol</label>
-    <br>
     <input type="text" id="symbol">
-    <br><br>
     <button id="drawButton" class="button">Paint</button>
     <button id="drawButtonInverse" class="button">Paint inverse</button>
     <div id="container"></div>
